force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Logs all exceptions and errors occurring in the system for audit and debugging</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXC-{00000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>