force-app/main/default/objects/Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of exception (e.g., DmlException, CalloutException)</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>