force-app/main/default/objects/Exception_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Class or trigger that generated the exception</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>